// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component DepartmentCourses within Layout for third cycle studies match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Sub menu"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/kopps-public/utbildning/forskarutbildning/kurser?l=en"
            >
              Courses
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              ABE/Concrete Structures
            </div>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
            >
              Courses
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1
                aria-labelledby="page-heading page-sub-heading"
                id="page-heading"
              >
                Courses
              </h1>
              <p
                aria-hidden="true"
                class="page-sub-heading"
                id="page-sub-heading"
              >
                ABE/Concrete Structures
              </p>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article "
            >
              <table
                class="table"
              >
                <thead>
                  <tr>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Course code
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Course name
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Scope
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Educational level
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <a
                        href="/student/kurser/kurs/FAF3115?l=en"
                      >
                        FAF3115
                      </a>
                    </td>
                    <td>
                      <a
                        href="/student/kurser/kurs/FAF3115?l=en"
                      >
                        Concrete and Other Cement Based Materials
                      </a>
                    </td>
                    <td>
                      7.5 hp
                    </td>
                    <td>
                      Third cycle
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        href="/student/kurser/kurs/F1C5031?l=en"
                      >
                        F1C5031
                      </a>
                    </td>
                    <td>
                      <a
                        href="/student/kurser/kurs/F1C5031?l=en"
                      >
                        Design Methods for Reinforced Concrete Structures
                      </a>
                    </td>
                    <td>
                      7.5 hp
                    </td>
                    <td>
                      Third cycle
                    </td>
                  </tr>
                </tbody>
              </table>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Contact for questions regarding education at KTH: 
                <a
                  href="https://www.kth.se/studycounselling"
                >
                  Central study counseling
                </a>
                <br />
                Contact regarding technical matters on this page: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component DepartmentCourses within Layout for third cycle studies match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Undermeny"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/kopps-public/utbildning/forskarutbildning/kurser"
            >
              Kurser
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              ABE/Betongbyggnad
            </div>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
            >
              Kurser
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1
                aria-labelledby="page-heading page-sub-heading"
                id="page-heading"
              >
                Kurser
              </h1>
              <p
                aria-hidden="true"
                class="page-sub-heading"
                id="page-sub-heading"
              >
                ABE/Betongbyggnad
              </p>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article "
            >
              <table
                class="table"
              >
                <thead>
                  <tr>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Kurskod
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Kursnamn
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Omfattning
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                    <th
                      style="cursor: pointer; user-select: none;"
                    >
                      <div
                        style="display: flex; flex-direction: row;"
                      >
                        <p>
                          Utbildningsnivå
                        </p>
                        <p
                          style="opacity: 0;"
                        >
                          ▲
                        </p>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <a
                        href="/student/kurser/kurs/FAF3115"
                      >
                        FAF3115
                      </a>
                    </td>
                    <td>
                      <a
                        href="/student/kurser/kurs/FAF3115"
                      >
                        Betong och andra cementbaserade material
                      </a>
                    </td>
                    <td>
                      7,5 hp
                    </td>
                    <td>
                      Forskarnivå
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <a
                        href="/student/kurser/kurs/F1C5031"
                      >
                        F1C5031
                      </a>
                    </td>
                    <td>
                      <a
                        href="/student/kurser/kurs/F1C5031"
                      >
                        Dimensioneringsmetoder för armerade betongkonstruktioner
                      </a>
                    </td>
                    <td>
                      7,5 hp
                    </td>
                    <td>
                      Forskarnivå
                    </td>
                  </tr>
                </tbody>
              </table>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Kontakt för frågor om utbildning på KTH: 
                <a
                  href="https://www.kth.se/studycounselling"
                >
                  Central studievägledning
                </a>
                <br />
                Teknisk kontakt om denna sida: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;
